Промежуточный коммит: интеграция main-server и stats-server через discovery-server